[gd_scene load_steps=3 format=3 uid="uid://bxjltn6dp8tjk"]

[ext_resource type="Script" path="res://scripts/CharacterCustomization.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0, 0, 0, 0.8)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="CharacterCustomization" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
expand_mode = 1
stretch_mode = 6

[node name="CharacterSprite" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -300.0
offset_right = 200.0
offset_bottom = 300.0
expand_mode = 1
stretch_mode = 5

[node name="DialogueBox" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -200.0
offset_right = -50.0
offset_bottom = -50.0
custom_styles/panel = SubResource("1")

[node name="NameLabel" type="Label" parent="DialogueBox"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 40.0
text = ""
horizontal_alignment = 2

[node name="DialogueText" type="Label" parent="DialogueBox"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -50.0
offset_right = 500.0
offset_bottom = 50.0
text = ""
autowrap_mode = 3

[node name="NameEntry" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_right = 100.0
size_flags_horizontal = 2
size_flags_vertical = 2
min_size = Vector2( 200, 40 )
placeholder_text = "Tu nombre"

[node name="ChoiceContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_right = 150.0
custom_constants/separation = 10

[node name="ContinueButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -140.0
offset_top = -90.0
offset_right = -20.0
offset_bottom = -40.0
text = "➤ Continuar"
visible = false

[node name="ConfirmNameButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = 40.0
offset_right = 80.0
offset_bottom = 90.0
text = "✓ Confirmar"
visible = false
